お問い合わせページのAPIをwasedule.comに紐づいたものに更新

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-CONTACT_EMAIL_TO="4megxx@gmail.com"
-CONTACT_EMAIL_FROM="lp@3716.me"
+CONTACT_EMAIL_TO="support@wasedule.com"
+CONTACT_EMAIL_FROM="lp@wasedule.com"
 GOOGLEPLAY_URL="https://play.google.com/store/apps/details?id=com.wasedule.wase_dule&hl=ja&pli=1"
 APPSTORE_URL="https://apps.apple.com/us/app/%E3%82%8F%E3%81%9B%E3%82%B8%E3%83%A5%E3%83%BC%E3%83%AB/id6479050214"
